--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'United States -- History -- Civil War, 1861-1865 -- Regimental histories
   -- Pennsylvania Infantry -- 140th -- Company K'
 - !lcc 'E456'
+- GITenberg
 title: History of Company K of the 140th Regiment Pennsylvania Volunteers (1862-'65)
 url: http://www.gutenberg.org/ebooks/45626
